# ClipVessel

./: .gitignore  README.md
assets/Film Clapperboard/: Film Clapperboard.af
presets/Handbrake/NVENC - Windows/: SAS-SAS 6Mbps H265 NVENC Windows.json  SAS-SAS CQ24 H265 NVENC Windows.json
presets/Handbrake/VideoToolbox - Mac/: SAS-SAS 6Mbps H265 VideoToolbox Mac.json  SAS-SAS CQ24 H265 VideoToolbox Mac.json
src/: ClipVessel.sln
src/ClipVessel.Client/: App.axaml  App.axaml.cs  ClipVessel.Client.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest  package-lock.json
src/ClipVessel.Client/src/: ClipVesselClient.csproj  Program.cs  _Imports.razor
src/ClipVessel.Client/src-tauri/: Cargo.toml  tauri.conf.json
src/ClipVessel.Client/src-tauri/src/: lib.rs  main.rs
src/ClipVessel.Client/src-tauri/src/commands/: is_job_running_command.rs  mod.rs
src/ClipVessel.Client/src-tauri/src/services/: mod.rs  video_processor_service.rs
src/ClipVessel.Client/src/Models/DTO/: Log.cs
src/ClipVessel.Client/src/Pages/: Home.razor
src/ClipVessel.Client/src/wwwroot/: index.html
src/ClipVessel.Client/src/wwwroot/scripts/: tauri-interop.js
