[package]
name = "clip-vessel-client"
version = "0.1.0"
description = "Clip Vessel Client App"
authors = [ "HarryCMather" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clip_vessel_client_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
